# DataHarbor.WebAPI/MappingProfile.cs
@@ -10,11 +10,14 @@ namespace DataHarbor.WebAPI
         public MappingProfile()
         {
             CreateMap<ProcessRequest, Declaration>()
-                .ForMember(dest => dest.Data, opt => opt.MapFrom(src => src.RawData.ToDictionaryList()));
-
-            CreateMap<Declaration, ProcessRequest>();
+                .ForMember(dest => dest.RawData, opt => opt.MapFrom(src => src.RawData.ToDictionaryList()))
+                .ForMember(dest => dest.Transactions, opt => opt.MapFrom(src => src.Transactions.ToDictionaryList()));
+       
+            CreateMap<Declaration, ProcessRequest>()
+                .ForMember(dest => dest.RawData, opt => opt.MapFrom(src => src.RawData.ToDataTable()))
+                .ForMember(dest => dest.Transactions, opt => opt.MapFrom(src => src.Transactions.ToDataTable()));
         }
 
-        
+
     }
 }
